# src/main/resources/openapi/openapi.yml
@@ -85,14 +85,14 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /users/v1/api/{id}:
+  /users/v1/api/{userId}:
     get:
       tags:
         - user
       summary: Получить пользователя по id
       parameters:
         - in: path
-          name: id
+          name: userId
           required: true
           schema:
             type: string
@@ -128,7 +128,7 @@ paths:
       summary: Обновить пользователя
       parameters:
         - in: path
-          name: id
+          name: userId
           required: true
           schema:
             type: string
@@ -176,7 +176,7 @@ paths:
       summary: Удалить пользователя
       parameters:
         - in: path
-          name: id
+          name: userId
           required: true
           schema:
             type: string
@@ -240,14 +240,14 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /users/v1/api/{id}/metadata:
+  /users/v1/api/{userId}/metadata:
     post:
       tags:
         - user-metadata
-      summary: Создать метаданные пользователя для указанного userId
+      summary: Создать метаданные пользователя
       parameters:
         - in: path
-          name: id
+          name: userId
           required: true
           schema:
             type: string
@@ -286,10 +286,10 @@ paths:
     get:
       tags:
         - user-metadata
-      summary: Получить метаданные пользователя по userId
+      summary: Получить метаданные пользователя
       parameters:
         - in: path
-          name: id
+          name: userId
           required: true
           schema:
             type: string
@@ -322,10 +322,10 @@ paths:
     patch:
       tags:
         - user-metadata
-      summary: Обновить метаданные пользователя по userId
+      summary: Обновить метаданные пользователя
       parameters:
         - in: path
-          name: id
+          name: userId
           required: true
           schema:
             type: string
@@ -364,10 +364,10 @@ paths:
     delete:
       tags:
         - user-metadata
-      summary: Удалить метаданные пользователя по userId
+      summary: Удалить метаданные пользователя
       parameters:
         - in: path
-          name: id
+          name: userId
           required: true
           schema:
             type: string
@@ -466,14 +466,14 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /categories/v1/api/{id}:
+  /categories/v1/api/{categoryId}:
     get:
       tags:
         - category
       summary: Получить категорию по id
       parameters:
         - in: path
-          name: id
+          name: categoryId
           required: true
           schema:
             type: string
@@ -509,7 +509,7 @@ paths:
       summary: Обновить категорию
       parameters:
         - in: path
-          name: id
+          name: categoryId
           required: true
           schema:
             type: string
@@ -557,7 +557,7 @@ paths:
       summary: Удалить категорию
       parameters:
         - in: path
-          name: id
+          name: categoryId
           required: true
           schema:
             type: string
@@ -584,11 +584,18 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
-  /categories/v1/api/projects:
+  /categories/v1/api/{categoryId}/projects:
     post:
       tags:
         - project
-      summary: Создать проект
+      summary: Создать проект в категории
+      parameters:
+        - in: path
+          name: categoryId
+          required: true
+          schema:
+            type: string
+            format: uuid
       requestBody:
         required: true
         content:
@@ -608,6 +615,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+        '404':
+          description: Категория не найдена
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         '500':
           description: Внутренняя ошибка сервера
           content:
@@ -617,8 +630,14 @@ paths:
     get:
       tags:
         - project
-      summary: Получить список проектов
+      summary: Получить список проектов в категории
       parameters:
+        - in: path
+          name: categoryId
+          required: true
+          schema:
+            type: string
+            format: uuid
         - in: query
           name: page
           schema:
@@ -644,20 +663,32 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+        '404':
+          description: Категория не найдена
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
         '500':
           description: Внутренняя ошибка сервера
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /categories/v1/api/projects/{id}:
+  /categories/v1/api/{categoryId}/projects/{projectId}:
     get:
       tags:
         - project
       summary: Получить проект по id
       parameters:
         - in: path
-          name: id
+          name: categoryId
+          required: true
+          schema:
+            type: string
+            format: uuid
+        - in: path
+          name: projectId
           required: true
           schema:
             type: string
@@ -693,7 +724,13 @@ paths:
       summary: Обновить проект
       parameters:
         - in: path
-          name: id
+          name: categoryId
+          required: true
+          schema:
+            type: string
+            format: uuid
+        - in: path
+          name: projectId
           required: true
           schema:
             type: string
@@ -735,7 +772,13 @@ paths:
       summary: Удалить проект
       parameters:
         - in: path
-          name: id
+          name: categoryId
+          required: true
+          schema:
+            type: string
+            format: uuid
+        - in: path
+          name: projectId
           required: true
           schema:
             type: string
@@ -841,14 +884,14 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /events/v1/api/{id}:
+  /events/v1/api/{eventId}:
     get:
       tags:
         - event
       summary: Получить событие по id
       parameters:
         - in: path
-          name: id
+          name: eventId
           required: true
           schema:
             type: string
@@ -884,7 +927,7 @@ paths:
       summary: Обновить событие
       parameters:
         - in: path
-          name: id
+          name: eventId
           required: true
           schema:
             type: string
@@ -926,7 +969,7 @@ paths:
       summary: Удалить событие
       parameters:
         - in: path
-          name: id
+          name: eventId
           required: true
           schema:
             type: string
@@ -992,7 +1035,7 @@ paths:
     get:
       tags:
         - tag
-      summary: Получить список тегов
+      summary: Получить список всех тегов
       parameters:
         - in: query
           name: page
@@ -1025,14 +1068,69 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-  /events/v1/api/tags/{id}:
+  /events/v1/api/{eventId}/tags:
+    get:
+      tags:
+        - tag
+      summary: Получить теги события
+      parameters:
+        - in: path
+          name: eventId
+          required: true
+          schema:
+            type: string
+            format: uuid
+        - in: query
+          name: page
+          schema:
+            type: integer
+            default: 0
+            minimum: 0
+        - in: query
+          name: size
+          schema:
+            type: integer
+            default: 10
+            minimum: 1
+      responses:
+        '200':
+          description: Список тегов события
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PagedTagDtoResponse'
+        '400':
+          description: Некорректные параметры запроса
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '404':
+          description: Теги для события не найдены
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        '500':
+          description: Внутренняя ошибка сервера
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+  /events/v1/api/{eventId}/tags/{tagId}:
     get:
       tags:
         - tag
       summary: Получить тег по id
       parameters:
         - in: path
-          name: id
+          name: eventId
+          required: true
+          schema:
+            type: string
+            format: uuid
+        - in: path
+          name: tagId
           required: true
           schema:
             type: string
@@ -1068,7 +1166,13 @@ paths:
       summary: Обновить тег
       parameters:
         - in: path
-          name: id
+          name: eventId
+          required: true
+          schema:
+            type: string
+            format: uuid
+        - in: path
+          name: tagId
           required: true
           schema:
             type: string
@@ -1116,7 +1220,13 @@ paths:
       summary: Удалить тег
       parameters:
         - in: path
-          name: id
+          name: eventId
+          required: true
+          schema:
+            type: string
+            format: uuid
+        - in: path
+          name: tagId
           required: true
           schema:
             type: string
